order and inventory service