@@ -1,4 +1,4 @@
-package com.ecommerce.product.config;
+package com.ecommerce.order.config;
 
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -13,27 +13,19 @@ import java.io.IOException;
 @Component
 public class GatewayValidationFilter extends OncePerRequestFilter {
 
+
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
-            throws ServletException, IOException {
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
 
-        String routeHeader = request.getHeader("X-Route-Header");
-        if(request.getRequestURI().startsWith("/products/images") && StringUtils.isNotBlank(routeHeader)) {
-            filterChain.doFilter(request, response);
-            return;
-        }
-
-        // Check for the header your Gateway injects
         String userRole = request.getHeader("X-User-Role");
-        // If the header is missing, it means the request bypassed the Gateway
-        if (userRole == null || userRole.isBlank()) {
+
+        if(StringUtils.isBlank(userRole)) {
             response.setStatus(HttpServletResponse.SC_FORBIDDEN);
             response.setContentType("application/json");
             response.getWriter().write("{\"error\": \"Direct access forbidden. Please use the API Gateway.\"}");
             return;
         }
 
-        // If header exists, move to the next filter in the chain
         filterChain.doFilter(request, response);
     }
 }
